--- a/mobile-ui/src/main/res/values/dimens.xml
+++ b/mobile-ui/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="text_small_body">14sp</dimen>
     <dimen name="text_smaller_body">12sp</dimen>
     <dimen name="text_tiny_body">10sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
