--- a/mobile-ui/src/main/res/values/colors.xml
+++ b/mobile-ui/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="graylight">#d3d3d3</color>
+    <color name="startblue">#0000FF</color>
+    <color name="endblue">#0000BB</color>
 </resources>
