--- a/mobile-ui/src/main/res/layout/activity_user_detail.xml
+++ b/mobile-ui/src/main/res/layout/activity_user_detail.xml
@@ -22,6 +22,7 @@
                 android:layout_height="150dp"
                 android:src="@drawable/man"/>
             <TextView
+                android:id="@+id/name"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
