--- a/mobile-ui/src/main/res/values/dimens.xml
+++ b/mobile-ui/src/main/res/values/dimens.xml
@@ -10,5 +10,7 @@
     <dimen name="text_smaller_body">12sp</dimen>
     <dimen name="text_tiny_body">10sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
