--- a/mobile-ui/src/main/res/layout-w600dp/item_list.xml
+++ b/mobile-ui/src/main/res/layout-w600dp/item_list.xml
@@ -47,10 +47,13 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
-    <FrameLayout
+
+
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/item_detail_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 
 </LinearLayout>
