--- a/mobile-ui/src/main/res/layout/fragment_user_detail.xml
+++ b/mobile-ui/src/main/res/layout/fragment_user_detail.xml
@@ -15,6 +15,7 @@
             android:layout_height="350dp"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/profile_img"
                 android:layout_marginTop="45dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
