Define strings constants

--- a/mobile-ui/src/main/res/layout/fragment_user_detail.xml
+++ b/mobile-ui/src/main/res/layout/fragment_user_detail.xml
@@ -51,7 +51,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Photos"
+                        android:text="@string/stars"
                         android:textSize="20sp"
                         />
                     <TextView
@@ -73,7 +73,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Followers"
+                        android:text="@string/followers"
                         android:textSize="20sp"
                         />
                     <TextView
@@ -95,7 +95,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Following"
+                        android:text="@string/following"
                         android:textSize="20sp"
                         />
                     <TextView
@@ -172,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
-                android:text="Add to group"/>
+                android:text="@string/add_to_favorites"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="25dp"
@@ -191,7 +191,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
-                android:text="Show all comments"/>
+                android:text="@string/repositories"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
